# kafka-client-rust

./: Cargo.toml
src/: main.rs
src/clients/: admin_client.rs  connection.rs  consumer_client.rs  kafka_client.rs  mod.rs
src/config/: mod.rs
src/protocol/: api_keys.rs  api_versions.rs  create_topic.rs  fetch.rs  find_coordinator.rs  header.rs  join_group.rs  kafka_error_codes.rs  list_offsets.rs  metadata.rs  mod.rs  offset_commit.rs  primitives.rs  produce.rs  record.rs  request.rs  response.rs  top_level.rs
src/protocol/metadata/: request.rs  response.rs
src/utils/: buffer_reader.rs  buffer_utils.rs  buffer_writer.rs  mod.rs
