[package]
name = "my-rust-kafka"
version = "0.1.0"
authors = ["Roi Mordechay <roi3363@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
bincode = "1.3.1"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.8.2"